--- a/src/gtksourceview-example/meson.build
+++ b/src/gtksourceview-example/meson.build
@@ -5,12 +5,4 @@ project('gucodeviewer', 'c',
 i18n = import('i18n')
 
 subdir('po')
-
-executable('gucodeviewer',
-           'gucodeviewer.c',
-           'main.c',
-           dependencies: [
-             dependency('gtk+-3.0'),
-             dependency('gtksourceview-4')
-           ],
-           install : true)
+subdir('src')
