migrate to GtkApplication and GtkBuilder

--- a/src/gtksourceview-example/src/meson.build
+++ b/src/gtksourceview-example/src/meson.build
@@ -1,6 +1,9 @@
-executable('gucodeviewer',
-           'gucodeviewer.c',
-           'main.c',
+datadir = get_option('prefix') / get_option('datadir') / project_name
+add_project_arguments('-DDATADIR="'+datadir+'"', language:'c')
+
+install_data('gucodeviewer.ui', install_dir : datadir)
+
+executable('gucodeviewer', 'main.c',
            dependencies: [
              dependency('gtk+-3.0'),
              dependency('gtksourceview-4')
