--- a/src/gtksourceview-example/meson.build
+++ b/src/gtksourceview-example/meson.build
@@ -2,6 +2,7 @@ project('gucodeviewer', 'c',
   version : '0.1',
   default_options : ['warning_level=3'])
 
+project_name = meson.project_name()
 i18n = import('i18n')
 
 subdir('po')
